# curcat

./: Cargo.toml  Readme.md  build.sh  build_redos.sh  curve.json
.github/workflows/: ci.yml  release.yml
example_config/: curcat.toml
src/: app.rs  config.rs  export.rs  i18n.rs  image.rs  image_info.rs  image_util.rs  interp.rs  main.rs  project.rs  snap.rs  types.rs  util.rs
src/app/: auto_trace.rs  calibration.rs  clipboard.rs  constants.rs  export_helpers.rs  export_state.rs  image_loader.rs  image_state.rs  interaction.rs  point_stats.rs  points.rs  project_state.rs  snap_helpers.rs  snap_state.rs  ui.rs  ui_state.rs  util.rs
src/app/ui/: auto_trace.rs  center.rs  common.rs  dialogs.rs  filters.rs  icons.rs  image_limits.rs  info.rs  project.rs  side.rs  stats.rs  top.rs
src/app/ui/side/: axis_input.rs  calibration.rs  export.rs  point_input.rs
src/image/: filters.rs  load.rs  meta.rs  transform.rs
src/project/: checksum.rs  io.rs  model.rs  path.rs  tests.rs
src/snap/: behavior.rs  color.rs  maps.rs  palette.rs  search.rs  util.rs
src/types/: axis.rs  coord.rs  mapping.rs
