[package]
name = "curcat"
version = "0.9.6"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "Digitize curves from chart images; calibrate axes, interpolate, export CSV/JSON/XLSX."
repository = "https://github.com/hexqnt/curcat"
homepage = "https://github.com/hexqnt/curcat"
readme = "README.md"
rust-version = "1.90"

[dependencies]
arboard = "3.6"
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = [
    "glow",
    "default_fonts",
    "persistence",
    "x11",
    "wayland",
] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "bmp",
    "tiff",
    "webp",
    "ico",
    "tga",
    "pnm",
    "hdr",
    "dds",
] }
chrono = { version = "0.4", default-features = false, features = [
    "alloc",
    "std",
] }
csv = "1.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
directories = "6.0"
rust_xlsxwriter = { version = "0.92", features = ["ryu"] }
egui-file-dialog = { version = "0.12" }
rayon = "1.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
