[package]
name = "curcat"
version = "0.9.13"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "Digitize curves from chart images; calibrate axes, interpolate, export CSV/JSON/XLSX."
repository = "https://github.com/hexqnt/curcat"
homepage = "https://github.com/hexqnt/curcat"
readme = "Readme.md"
keywords = ["digitizer", "chart", "graph", "egui", "calibration"]
categories = ["graphics", "visualization", "gui"]

[dependencies]
arboard = "3.6"
egui = "0.34"
eframe = { version = "0.34", default-features = false, features = [
    "glow",
    "default_fonts",
    "persistence",
    "x11",
    "wayland",
] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "bmp",
    "tiff",
    "webp",
    "ico",
    "tga",
    "pnm",
    "hdr",
    "dds",
] }
chrono = { version = "0.4", default-features = false, features = [
    "alloc",
    "std",
] }
csv = "1.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.12"
toml = "1.1"
directories = "6.0"
rust_xlsxwriter = { version = "0.94", features = ["ryu"] }
egui-file-dialog = { version = "0.13" }
rayon = "1.12"
bincode = { version = "2.0", features = ["serde"] }
lz4_flex = "0.13"
crc32fast = "1.5"
pathdiff = "0.2"
egui_extras = { version = "0.34", features = ["svg"] }
resvg = "0.47"
maud = "0.27.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
